# dongwon-competition

./: .env.example  .gitignore  README.md  prompt_template.txt  pyproject.toml  requirements.txt
data/: sample_submission.csv
src/dongwon/: agents.py  api.py  cli.py  config.py  constants.py  logger.py  persona_cache.py  persona_generator.py  postprocessing.py  prompt.py  simulation.py  utils.py
